--- a/index.mdx
+++ b/index.mdx
@@ -13,7 +13,7 @@ ZeroSettle provides two products for iOS developers: **In-App Purchase** for web
     icon="credit-card"
     href="/iap/overview"
   >
-    Web checkout for iOS apps. Reduce fees from 30% to 4.5%. We handle tax, VAT/GST, and compliance.
+    Web checkout for iOS apps. Reduce fees from 30% to 4.5% + 30¢. We handle tax, VAT/GST, and compliance.
   </Card>
   <Card
     title="Skill-Based Escrow"
@@ -28,7 +28,7 @@ ZeroSettle provides two products for iOS developers: **In-App Purchase** for web
 
 ## In-App Purchase
 
-Replace Apple's 30% cut with our 4.5% fee. ZeroSettle acts as your Merchant of Record—we handle the entire payment flow, tax remittance, and compliance so you don't have to.
+Replace Apple's 30% cut with our 4.5% + 30¢ fee. ZeroSettle acts as your Merchant of Record—we handle the entire payment flow, tax remittance, and compliance so you don't have to.
 
 ### How It Works
 
@@ -108,11 +108,9 @@ Build competitive games where players stake real money and earn payouts based on
 | --- | --- | --- |
 | **Use Case** | Subscriptions, one-time purchases, digital goods | Skill-based games, contests, tournaments |
 | **Payment Flow** | Web checkout via browser | On-chain staking via embedded wallet |
-| **Fee** | 4.5%* | 5% of pot |
-| **Settlement** | Instant to your Stripe account | Instant on-chain to player wallet |
+| **Fee** | 4.5% + 30¢ | 5% of pot |
+| **Settlement** | [Instant to Stripe](https://connect.stripe.com/express_login) | Instant on-chain to player wallet |
 | **Compliance** | Tax, VAT/GST, MoR | Skill gaming regulations |
-
-*\*Standard rate for transactions over \$15. Smaller transactions add \$0.30 flat fee.*
 
 ---
 
